--- a/web/style/css/reservation.css
+++ b/web/style/css/reservation.css
@@ -6,17 +6,30 @@ html, body {
 
 .main {
 	min-height: 100%;
-	padding-bottom: 60px;
+	padding-bottom: 70px;
 	box-sizing: border-box;
 }
 
 .footer {
-	min-height: 40px;
-	margin-top: -40px;
-	background-color: #A2ABB3;
+	min-height: 50px;
+	margin-top: -52px;
+	background-color: #F8F8F8;
 }
 
 .header {
-	background-color: #A2ABB3;
+	background-color: #F8F8F8;
 	min-height: 50px;
+}
+
+.input-error {
+	color: #FF0000;
+}
+
+.loacale-swith {
+	margin: 7.5 15px;
+}
+
+.footer-panel {
+	margin: 0px;
+	background-color: #F8F8F8;
 }
